# teo-s-eda-toolkit

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  batch_processor.py  debug_patch.py  edatoolkitanalysis.md  index.html  main.py  mkdocs.yml  objects.inv  patch_test.py  patch_test2.py  pyproject.toml  requirements.txt  test_semhash_debug.py  test_semhash_debug2.py
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
contributing/: index.html
docs/: api.md  contributing.md  index.md  roadmap.md
legacy/: example_usage.py  patch_test3.py
roadmap/: index.html
rust/: Cargo.toml
rust/src/: lib.rs
rust_extensions/boilerplate_cleaner_rs/: Cargo.toml  pyproject.toml
rust_extensions/boilerplate_cleaner_rs/src/: lib.rs
search/: search_index.json
src/: logging_manager.py  performance_monitor.py
src/data_quality/: __init__.py  exceptions.py
src/data_quality/config/: schema.py
src/data_quality/core/: __init__.py  base_processor.py  framework.py  pipeline.py
src/data_quality/processors/: bge_m3_turkish_detector.py  boilerplate_cleaner.py  categories.py  duplicate_detector.py  entry_rules.py  external_validation.py  hadoop_cleaner.py  html_cleaner.py  mandatory_fields.py  missing_values.py  noise_detection.py  numerical_formats.py  outdated_data.py  relationships.py  rust_regex_engine.py  rust_tfidf_engine.py  semhash_turkish_detector.py  text_validation.py  uniqueness.py  xlsx_processor.py
src/data_quality/utils/: config_validator.py  legal_domain_filter.py
tests/: conftest.py  test_bge_m3_with_parquet.py  test_hadoop_cleaner.py  test_hadoop_cleaner_standalone.py  test_legal_domain_filter.py  test_semhash_turkish_detector.py  test_semhash_with_csv.py  test_semhash_with_parquet.py  test_turkish_boilerplate_with_synthetic_data.py  test_turkish_stopwords.py
tests/benchmarks/: bench_processors.py  bench_rust_regex.py  bench_tfidf.py  conftest.py  test_memory.py
tests/unit/: test_bge_m3_detector.py  test_bge_m3_detector_extra.py  test_bge_m3_detector_extra2.py  test_boilerplate_cleaner.py  test_boilerplate_cleaner_extra.py  test_boilerplate_cleaner_extra2.py  test_categories.py  test_duplicate_detector.py  test_entry_rules.py  test_external_validation.py  test_hadoop_cleaner.py  test_html_cleaner.py  test_mandatory_fields.py  test_missing_values.py  test_noise_detection.py  test_numerical_formats.py  test_outdated_data.py  test_relationships.py  test_semhash_detector.py  test_semhash_detector_extra.py  test_semhash_detector_extra2.py  test_text_validation.py  test_uniqueness.py  test_xlsx_processor.py
