[build-system]
requires = ["setuptools>=61.0", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "teo-eda-toolkit"
version = "1.0.0"
description = "A data quality framework with legal domain filtering"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Teo", email = "your.email@example.com"}]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "textual>=0.40.0",
    "rich>=13.3.3",
    "psutil>=5.9.0",
    "pyarrow>=7.0.0",
    "PyYAML>=6.0.1",
    "click>=8.0.4",
    "python-dateutil>=2.8.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastparquet>=0.8.1",
    "python-snappy>=0.6.1",
    "brotli>=1.0.9",
    "lz4>=3.1.3",
    "zstandard>=0.18.0",
    "beautifulsoup4>=4.9.3",
    "types-beautifulsoup4>=4.12.0",
    "datasketch>=1.5.9"
]

[project.optional-dependencies]
spark = ["pyspark>=3.4.0"]
nlp = ["torch>=2.0.0", "transformers>=4.30.0", "sentencepiece>=0.1.99"]
turkish = ["FlagEmbedding>=1.2.0", "semhash>=0.3.0", "nltk>=3.8.1"]
viz = ["matplotlib>=3.5.3", "seaborn>=0.12.2", "plotly>=5.13.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-mock>=3.10.0", "pytest-benchmark>=4.0", "black>=22.0", "ruff>=0.4", "mypy>=1.0", "flake8>=6.0.0"]
all = ["teo-eda-toolkit[spark,nlp,turkish,viz]"]

[project.scripts]
data-quality = "data_quality.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["transformers.*", "torch.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "legacy/",
    ".venv/",
    "build/",
    "site/",
    "__pycache__/",
    "*.egg-info/",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E402",  # module-level import not at top (common with optional try/except imports)
    "E701",  # multiple statements on one line (colon)
    "E712",  # equality comparison to True/False (valid in pandas contexts)
    "E741",  # ambiguous variable name (l, O, I)
    "F841",  # local variable assigned but never used
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E712", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/data_quality/processors --cov-report=term-missing"
markers = [
    "spark: marks tests that require SparkSession",
    "benchmark: marks performance benchmark tests (select with --benchmark-only)",
]
