[package]
name = "boilerplate_cleaner_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "boilerplate_cleaner_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
regex = "1"
rayon = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
