[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "boilerplate-cleaner-rs"
version = "0.1.0"
description = "Rust-powered regex boilerplate cleaner for teo-eda-toolkit"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "boilerplate_cleaner_rs"
features = ["pyo3/extension-module"]
